Removed babel Changed transformer output to return composite object with code property instead of just code as string output.

--- a/webpack-plugin-jst/package.json
+++ b/webpack-plugin-jst/package.json
@@ -8,9 +8,7 @@
   },
   "bundleDependencies": [],
   "dependencies": {
-    "@appfibre/jst": "^0.1.4",
-    "@babel/core": "^7.1.2",
-    "@types/babel__core": "^7.1.0"
+    "@appfibre/jst": "^0.1.4"
   },
   "deprecated": false,
   "description": "JST Node/Babel Syntax Loader",
