--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,20 @@
   "license": "ISC",
   "devDependencies": {
     "@appfibre/jst": "^0.1.4",
-    "rollup": "^1.12.1",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "rollup": "^1.12.2",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.0.0",
     "rollup-plugin-typescript2": "^0.21.0",
     "rollup-plugin-uglify": "^6.0.2",
     "typescript": "^3.4.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "^3.0.1",
+    "pinkie": "^2.0.4",
+    "systemjs": "^3.1.6"
+  }
 }
