--- a/core/package.json
+++ b/core/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@appfibre/core",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "AppFibre Jst/App framework",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist",
+  "module": "lib",
+  "types": "dist",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
