--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@appfibre/webapp",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "AppFibre WebApp",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist",
+  "module": "lib",
+  "types": "dist",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +16,6 @@
   "author": "Soleil De Gloria",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@appfibre/core": "^0.1"
+    "@appfibre/core": "^0.0.1"
   }
 }
