--- a/webcomponents/package.json
+++ b/webcomponents/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-components",
+  "name": "webcomponents",
   "version": "0.1.0",
   "description": "Fibre App component library",
   "main": "index.js",
@@ -16,22 +16,23 @@
     "appfibre"
   ],
   "devDependencies": {
-    "@appfibre/core": "^0.1.0",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "autoprefixer": "^9.5.1",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "autoprefixer": "^9.6.0",
     "rollup": "^1.12.2",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-node-resolve": "^5.0.1",
     "rollup-plugin-postcss-modules": "^2.0.1",
-    "rollup-plugin-typescript2": "^0.21.0",
+    "rollup-plugin-typescript2": "^0.21.1",
     "rollup-plugin-uglify": "^6.0.2",
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "core-js": "^3.0.1",
+    "@appfibre/core": "^0.0.1",
+    "@appfibre/webapp": "^0.0.1",
+    "core-js": "^3.1.3",
     "pinkie": "^2.0.4",
     "systemjs": "^3.1.6"
   }
