Extracted @appfibre/types out of solutions (refactored) Introduced concept of cdn (scripts urls starting with @cdn) Adjusted projects to accommodate this

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "aggregate functions",
   "private": true,
   "scripts": {
-    "start": "concurrently \"tsc -p core -w\" \"tsc -p webapp -w\" \"tsc -p services-ui-react -w\" \"tsc -p services-ui-preact -w\" \"tsc -p webpack-plugin-jst -w\" \"npm run start-rollup-plugin-jst\" \"npm run start-webcomponents\" ",
-    "build": "tsc -p core && tsc -p webapp && tsc -p services-ui-react && tsc -p services-ui-preact && tsc -p webpack-plugin-jst && npm run build-rollup-plugin-jst && npm run build-webcomponents",
+    "start": "concurrently \"tsc -p types -w\" \"tsc -p core -w\" \"tsc -p webapp -w\" \"tsc -p services-ui-react -w\" \"tsc -p services-ui-preact -w\" \"tsc -p webpack-plugin-jst -w\" \"npm run start-rollup-plugin-jst\" \"npm run start-webcomponents\" ",
+    "build": "tsc -p types && tsc -p core && tsc -p webapp && tsc -p services-ui-react && tsc -p services-ui-preact && tsc -p webpack-plugin-jst && npm run build-rollup-plugin-jst && npm run build-webcomponents",
     "test": "npm run test-test",
     "build-rollup-plugin-jst": "cd rollup-plugin-jst & npm run build",
     "start-rollup-plugin-jst": "cd rollup-plugin-jst & npm start",
