--- a/core/package.json
+++ b/core/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "@appfibre/types": "^0.0.1"
+  },
   "keywords": [
     "AppFibre",
     "JST"
