--- a/bundles/package.json
+++ b/bundles/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@appfibre/bundles",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Fibre App bundles",
-  "main": "./dist",
+  "main": "./",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
