--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "concurrently \"tsc -p types -w\" \"tsc -p core -w\" \"tsc -p webapp -w\" \"tsc -p webcomponents -w\" \"tsc -p services-ui-react -w\" \"tsc -p services-ui-preact -w\" \"tsc -p webpack-plugin-jst -w\" \"npm run start-bundles\" ",
     "build": "tsc -p types && tsc -p core && tsc -p webapp && tsc -p webcomponents && tsc -p services-ui-react && tsc -p services-ui-preact && tsc -p webpack-plugin-jst && npm run build-bundles",
     "test": "npm run test-test",
-    "build-bundles": "cd webcomponents & npm run build",
-    "start-bundles": "cd webcomponents & npm start",
+    "build-bundles": "cd bundles & npm run build",
+    "start-bundles": "cd bundles & npm start",
     "test-test": "cd tests & npm test"
   },
   "devDependencies": {
